<resources>
    <string name="app_name">大飞秘籍</string>
    <string name="foo_text1">从首页跳转过来了</string>
    <string name="foo_new_text1">通过java代码重新赋值的数据</string>

    <string name="feiMenu01_text">我是菜单页面</string>
    <string name="feiMenu00_home">返回首页</string>
    <string name="feiMenu00_foo">去foo页面</string>
    <string name="feiMenu00_bar">去bar页面</string>
    <string name="feiMenu01_link">第1个页面</string>
    <string name="feiMenu02_link">第2个页面,生命周期,数据传输</string>
    <string name="feiMenu03_link">第3个页面,表单使用</string>
    <string name="feiMenu03_1_link">第3_1个页面,表单使用</string>
    <string name="feiMenu03_2_link">第3_2个页面,日期和时间</string>
    <string name="feiMenu03_3_link">第3_3个页面,???</string>

    <string name="feiMenu04_link">第4个页面,WebView使用</string>
    <string name="feiMenu05_link">第5个页面,SharedPreferences 数据共享</string>
    <string name="feiMenu06_link">第6个页面,SQLite 操作数据库</string>
    <string name="feiMenu07_link">第7个页面,全局变量</string>
    <string name="feiMenu08_link">第8个页面,Jetpack Room 操作数据库 ???</string>
    <string name="feiMenu09_link">第9个页面,下拉列表 spinner </string>
    <string name="feiMenu10_link">第10个页面,列表视图 ListView</string>
    <string name="feiMenu11_link">第11个页面,网格视图 GridView</string>
    <string name="feiMenu12_link">第12个页面,翻页视图ViewPager</string>
    <string name="feiMenu13_link">第13个页面,静态staticFragment</string>
    <string name="feiMenu14_link">第14个页面,动态dynamic Fragment</string>
    <string name="feiMenu15_link">第15个页面,标准广播Broadcast </string>
    <string name="feiMenu16_link">第16个页面,有序广播Broadcast </string>
    <string name="feiMenu17_link">第17个页面,系统分钟到达广播 和 网路变更广播 </string>
    <string name="feiMenu18_link">第18个页面,定时管理器 AlarmManager </string>
    <string name="feiMenu19_link">第19个页面,一般服务 service </string>
    <string name="feiMenu19_2_link">第19_2个页面,绑定本地服务 service </string>
    <string name="feiMenu19_3_link">第19_3个页面,服务 IntentService </string>

    <string name="demo01_link">demo01, 常用导航布局</string>
    <string name="demo02_link">demo02, 三级联动</string>
    <string name="demo03_link">demo03, WebView交互数据</string>
    <string name="demo04_link">demo04, Retrofit网路请求</string>
    <string name="demo05_link">demo05, ????</string>
    <string name="demo06_link">demo06, ????</string>

    <string name="fei_com_hint">请输入</string>

    <string name="fei03_login_by_password">密码登录</string>
    <string name="fei03_login_by_verifyCode">验证码登录</string>
    <string name="fei03_phone_number">手机号码</string>
    <string name="fei03_inout_phone_number">请输入手机号码</string>
    <string name="fei03_login_password">登录密码</string>
    <string name="fei03_input_password">请输入密码</string>
    <string name="fei03_forget_password">忘记密码</string>
    <string name="fei03_remember_password">记住密码 12345</string>
    <string name="fei03_login">登 &#160; &#160; &#160; 录</string>
    <string name="fei03_inout_new_password">输入新密码</string>
    <string name="fei03_inout_new_password_hint">请输入新密码</string>
    <string name="fei03_confirm_new_password">确认新密码</string>
    <string name="fei03_confirm_new_password_again">请再次确认新密码</string>
    <string name="fei03_verifyCode">  &#160; &#160;验证码：</string>
    <string name="fei03_input_verifyCode">请输入验证码：</string>
    <string name="fei03_get_verifyCode">获取验证码</string>
    <string name="fei03_done">确 &#160; &#160; &#160; &#160;认</string>


</resources>